<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
<string name="app_name">Lumicall</string>
<string name="pstn_name">Phone Call</string>
<string name="sip_name">SIP Call, when available</string>
<string name="about">Lumicall is an open-source SIP client for Android
\n
\nSee http://www.lumicall.org for more info
\n
\nVersion ${VERSION}
\nThe software has been released for testing.
\n
\nCopyright (C) 2012-2016 Ready Technology (UK) Limited (http://www.lumicall.org)
\nCopyright (C) 2017 Urvika Gola (urvika.gola@gmail.com)
\nCopyright (C) 2017 Bruno Magalhães (bfmags@gmail.com)
\nCopyright (C) 2017 Juliana Louback (juliana.m.louback@gmail.com)
\nCopyright (C) 2016 Pranav Jain (contact@pranavjain.me)
\nCopyright (C) 2011 Jitsi / ice4j
\nCopyright (C)      DNSjava
\nCopyright (C)      ENUMdroid
\nCopyright (C)      libphonenumber
\nCopyright (C) 2009 The Sipdroid Open Source Project (http://sipdroid.org)
\nCopyright (C) 2008 Hughes Systique Corporation, USA (http://hsc.com)
\nCopyright (C) 2006 The Android Open Source Project (http://android.com)
\nCopyright (C) 2005 Luca Veltri - University of Parma - Italy (http://mjsip.org)
\n
\nThis program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.
\n
\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details (http://www.gnu.org/licenses).
\n
\nLumicall has been supported by Google Summer of Code and Outreachy.
</string>
<string name="reg">Registering...</string>
<string name="regpref">Preferred</string>
<string name="regclick">Click to select</string>
<string name="regfailed">Registration failed</string>
<string name="voicemail">Message(s) Waiting</string>
<string name="auto_enabled">Auto-Answer/Speakerphone</string>
<string name="auto_disabled">Auto-Answer off</string>
<string name="hint">user@domain</string>
<string name="instruction_dial_sip">Dial any SIP address here, or use the Android dialer to dial a phone number or contact.  You must have a SIP identity configured with the PSTN option ticked or Lumicall may not offer to route dialed numbers over SIP.</string>
<string name="field_dial_sip">sip:</string>
<string name="hint2">Phone Number</string>
<string name="empty">Please enter called party address as name@domain.com</string>
<string name="notfast">No suitable data network available</string>
<string name="settings_account">SIP Account</string>
<string name="settings_line">Line</string>
<string name="settings_username">Authorization Username</string>
<string name="settings_password">Password</string>
<string name="settings_server">Server or Proxy</string>
<string name="settings_domain">Domain</string>
<string name="settings_domain2">Leave empty if same as server</string>
<string name="settings_username1">Username or Caller ID</string>
<string name="settings_callerid2">Leave empty if same as authorization username</string>
<string name="settings_port">Port</string>
	<string-array name="port_display_values">
		<item>53</item>
		<item>69</item>
		<item>80</item>
		<item>135</item>
		<item>161</item>
		<item>443</item>
		<item>500</item>
		<item>1433</item>
		<item>1701</item>
		<item>1812</item>
		<item>3389</item>
		<item>4500</item>
		<item>5060 (standard)</item>
		<item>5061</item>
		<item>5900</item>
		<item>16999</item>
		<item>26999</item>
		<item>36999</item>
		<item>custom</item>
	</string-array>
	<string-array name="port_values">
		<item>53</item>
		<item>69</item>
		<item>80</item>
		<item>135</item>
		<item>161</item>
		<item>443</item>
		<item>500</item>
		<item>1433</item>
		<item>1701</item>
		<item>1812</item>
		<item>3389</item>
		<item>4500</item>
		<item>5060</item>
		<item>5061</item>
		<item>5900</item>
		<item>16999</item>
		<item>26999</item>
		<item>36999</item>
		<item>0</item>
	</string-array>
<string name="settings_protocol">Protocol</string>
    <string-array name="protocol_display_values">
        <item>TLS (secure)</item>
        <item>TCP</item>
        <item>UDP</item>        
    </string-array>
    <string-array name="protocol_values">
        <item>tls</item>
        <item>tcp</item>
        <item>udp</item>
    </string-array>
<string name="settings_vquality">Video Quality</string>
<string name="settings_q">Q value</string>
<string name="settings_options">Call Options</string>
<string name="settings_dialing_integration">Dialing popup</string>
<string name="settings_dialing_integration_info">When dialing, display the popup to select SIP and ENUM routes</string>
<string name="settings_pref">Preferred Call Type</string>
<string name="settings_pref2">Override by adding \'+\' behind a number in Dialer, or by selecting \'text to\' in Contacts</string>
<string name="settings_auto_on">Auto-Answer in use</string>
<string name="settings_auto_on2">Short vibrating alert when screen is on</string>
<string name="settings_auto_ondemand">Auto-Answer on demand</string>
<string name="settings_auto_ondemand2">Show toggle switch in status bar</string>
<string name="settings_auto_headset">Auto-Answer headset</string>
<string name="settings_auto_headset2">When wired headset is connected</string>
<string name="settings_notifications">Notifications</string>
<string name="settings_reg">Registration</string>
<string name="settings_reg2">Allows selection of preferred SIP account</string>
<string name="settings_notify">Missed Call</string>
<string name="settings_notify2">Notify with blue LED</string>
<string name="settings_nodata">No Data</string>
<string name="settings_nodata2">Indicate missing voice packets by audible tones</string>
<string name="settings_advanced_options">Advanced Options</string>
<string name="settings_av_options">Audio/Video</string>
<string name="settings_audio_mode">Preferred audio mode</string>
<string name="settings_eargain">Earpiece Gain</string>
<string name="settings_micgain">Microphone Gain</string>
<string name="settings_heargain">Headset Gain</string>
<string name="settings_hmicgain">Headset Mic</string>
<string name="settings_wireless_options">Wireless</string>
<string name="settings_bluetooth">Requires Android 2.2 or higher</string>
<string name="settings_keepon">Screen on</string>
<string name="settings_keepon2">Required by some devices for trouble-free Wi-Fi</string>
<string name="settings_selectwifi">Select Wi-Fi AP</string>
<string name="settings_selectwifi2">By signal level</string>
<string name="settings_ownwifi">Control Wi-Fi Power</string>
<string name="settings_ownwifi2">Saves battery</string>
<string name="settings_siproute">SIP identity</string>
<string name="settings_siproute2">Identity used for calling arbitrary SIP addresses</string>
<string name="settings_siproute_dialog">SIP identity</string>
<string name="settings_telroute">PSTN carrier</string>
<string name="settings_telroute2">Identity used for calling PSTN numbers</string>
<string name="settings_telroute_dialog">PSTN carrier</string>
<string name="settings_prefer_ipv4">Prefer IPv4 only</string>
<string name="settings_prefer_ipv4_info">Some devices have bugs in IPv6 stack</string>
<string name="settings_log_uri_prefix">URI prefix for call log</string>
<string name="settings_log_uri_prefix_info">Using "sip:" in call log triggers Android bug #58097</string>
<string name="settings_log_uri_hack">URI hack for call log</string>
<string name="settings_log_uri_hack_info">Substitute @ symbol, workaround #58097</string>
<string name="settings_auth_full_uri">URI as auth user</string>
<string name="settings_auth_full_uri_info">When authentication username unspecified, use the full URI as authentication username.  By default, only the user-part is used.</string>
<string name="settings_publish_title">Enable PUBLISH</string>
<string name="menu_bluetooth">Bluetooth (experimental)</string>
<string name="codecs">Audio Codecs</string>
<string name="activate_instructions">You should receive an SMS text containing an activation code.  Please wait for it to arrive.</string>
<string name="activate_code">Enter the activation code here (e.g. ABC123XYZ456:+123456789000)</string>
<string name="activate_proceed">Activate</string>
<string name="activate_re_reg">Request code again</string>
<string name="activate_manual">No SMS code received?</string>
<string name="sip_identities">SIP Accounts</string>
<string name="sip_address_uri">SIP address/URI</string>
<string name="sip_reg_server_name" >Registration server name</string>
<string name="sip_reg_server_port" >Registration server port</string>
<string name="sip_reg_server_protocol" >Registration server protocol</string>
<string name="settings_outbound">Use outbound proxy</string>
<string name="settings_outbound2" >Send calls for any SIP domain via proxy</string>
<string name="sip_outbound_server_name" >Outbound proxy name</string>
<string name="sip_outbound_server_port" >Outbound proxy port</string>
<string name="sip_outbound_server_protocol">Outbound proxy protocol</string>
<string name="sip_carrier_intl_prefix" >Intl. dialing prefix</string>
<string name="sip_carrier_intl_prefix2" >E.g. 00 in Europe, 0011 in Australia</string>
<string name="sip_stun_server_name" >STUN server name</string>
<string name="sip_stun_server_port" >STUN server port</string>
<string name="sip_stun_server_protocol">STUN server protocol</string>
<string name="settings_ptt_enable">Enable PTT</string>
<string name="settings_ptt_enable_info">Experimental, potentially high battery drain</string>
<string name="ptt_channels">PTT Channels</string>
<string name="ptt_channel_alias">Alias</string>
<string name="ptt_channel_address">Multicast address</string>
<string name="ptt_channel_port">Port</string>
<string name="ptt_channel_ttl">TTL</string>
<string name="ptt_channel_key">Encryption key</string>
<string name="enum_suffixes">ENUM Providers</string>
<string name="settings_ganglia_options">Monitoring (Ganglia)</string>
<string name="settings_ganglia_enable">Enable Ganglia</string>
<string name="settings_ganglia_enable2">Enable embedded Ganglia agent</string>
<string name="settings_ganglia_uuid_enable">UUID send mode</string>
<string name="settings_ganglia_uuid_enable2">Requires gmond UUID branch</string>
<string name="settings_ganglia_heartbeat">Enable heartbeat</string>
<string name="settings_ganglia_heartbeat2">Send heartbeat from this app</string>
<string name="settings_ganglia_dest">Destination host/group</string>
<string name="settings_ganglia_port">Destination port</string>
<string name="settings_ganglia_ttl">Multicast TTL</string>
<string name="settings_ganglia_interval">Transmit interval</string>
    <string name="silent_config">Configure Silent Mode</string>
    <string name="silent_disable_enable">Disable/Enable</string>
    <string name="silent_on">Silent Mode On</string>
    <string name="silent_off">Silent Mode is Off"</string>
    <string name="silent_enter_days_time">Add Work Days/Hours</string>
    <string name="silent_optional">(Optional)</string>
    <string name="silent_heading">To enable silent mode based on your schedule</string>
    <string name="silent_enter_time">1. Enter Time in 24 Hour Format </string>
    <string name="silent_enter_days">2. Select Work Days</string>
    <string name="silent_from"> From </string>
    <string name="silent_to"> To </string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="silent_save">Save</string>
</resources>