<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceScreen
		android:key="sipIdentities"
		android:title="@string/sip_identities" >
        	<intent
                	android:action="android.intent.action.MAIN"
	                android:targetPackage="org.lumicall.android"
	                android:targetClass="org.lumicall.android.preferences.SIPIdentitiesSettings" />
	</PreferenceScreen>
	<org.lumicall.android.preferences.SIPIdentityListPreference
				android:key="sip_pref_sip_identity"
				android:title="@string/settings_siproute"
				android:summary="@string/settings_siproute2"
				android:dialogTitle="@string/settings_siproute_dialog"/>
		<org.lumicall.android.preferences.SIPIdentityListPreference
				android:key="tel_pref_sip_identity"
				android:title="@string/settings_telroute"
				android:summary="@string/settings_telroute2"
				android:dialogTitle="@string/settings_telroute_dialog"/>
	<PreferenceScreen
		android:key="enumSuffixes"
		android:title="@string/enum_suffixes" >
        	<intent
                	android:action="android.intent.action.MAIN"
	                android:targetPackage="org.lumicall.android"
	                android:targetClass="org.lumicall.android.preferences.ENUMSuffixesSettings" />
	</PreferenceScreen>
	<PreferenceScreen
		android:key="pttChannels"
		android:title="@string/ptt_channels" >
        	<intent
                	android:action="android.intent.action.MAIN"
	                android:targetPackage="org.lumicall.android"
	                android:targetClass="org.lumicall.android.preferences.PTTChannelsSettings" />
	</PreferenceScreen>
	<PreferenceScreen android:title="@string/settings_options">
			<CheckBoxPreference
				android:key="dialing_integration"
				android:defaultValue="true"
				android:title="@string/settings_dialing_integration"
				android:summary="@string/settings_dialing_integration_info" />
			<ListPreference
				android:key="pref"
				android:title="@string/settings_pref"
				android:entries="@array/pref_display_values"
				android:entryValues="@array/pref_values"
				android:summary="@string/settings_pref2"
				android:dialogTitle="@string/settings_pref" />
			<CheckBoxPreference
				android:key="auto_on"
				android:title="@string/settings_auto_on"
				android:summary="@string/settings_auto_on2" />
			<CheckBoxPreference
				android:key="auto_ondemand"
				android:title="@string/settings_auto_ondemand"
				android:summary="@string/settings_auto_ondemand2" />
			<CheckBoxPreference
				android:key="auto_headset"
				android:title="@string/settings_auto_headset"
				android:summary="@string/settings_auto_headset2" />
			<!-- <CheckBoxPreference
				android:key="callrecord"
				android:title="@string/settings_callrecord"
				android:summary="@string/settings_callrecord2" /> -->
	</PreferenceScreen>
	<PreferenceScreen android:title="@string/settings_notifications">
			<CheckBoxPreference
				android:key="notify"
				android:title="@string/settings_notify"
				android:summary="@string/settings_notify2" />
			<CheckBoxPreference
				android:key="nodata"
				android:title="@string/settings_nodata"
				android:summary="@string/settings_nodata2" />
	</PreferenceScreen>
	<PreferenceScreen android:title="@string/settings_av_options">
	    	<ListPreference
				android:key="audio_mode"
				android:title="@string/settings_audio_mode"
				android:entries="@array/audio_mode_display_values"
				android:entryValues="@array/audio_mode_values"
				android:defaultValue="DETECT"
				android:dialogTitle="@string/settings_audio_mode" />
			<ListPreference
				android:key="eargain"
				android:title="@string/settings_eargain"
				android:entries="@array/eargain_display_values"
				android:entryValues="@array/eargain_values"
				android:defaultValue="0.25"
				android:dialogTitle="@string/settings_eargain" />
			<ListPreference
				android:key="micgain"
				android:title="@string/settings_micgain"
				android:entries="@array/eargain_display_values"
				android:entryValues="@array/eargain_values"
				android:defaultValue="0.25"
				android:dialogTitle="@string/settings_micgain" />
			<ListPreference
				android:key="heargain"
				android:title="@string/settings_heargain"
				android:entries="@array/eargain_display_values"
				android:entryValues="@array/eargain_values"
				android:defaultValue="0.25"
				android:dialogTitle="@string/settings_heargain" />
			<ListPreference
				android:key="hmicgain"
				android:title="@string/settings_hmicgain"
				android:entries="@array/eargain_display_values"
				android:entryValues="@array/eargain_values"
				android:defaultValue="1.0"
				android:dialogTitle="@string/settings_hmicgain" />
			<ListPreference
				android:key="vquality"
				android:title="@string/settings_vquality"
				android:entries="@array/vquality_display_values"
				android:entryValues="@array/vquality_values"
				android:defaultValue="low"
				android:dialogTitle="@string/settings_vquality" />
	</PreferenceScreen>
	<PreferenceScreen
		android:key="codecs"
		android:title="@string/codecs" >
        	<intent
                	android:action="android.intent.action.MAIN"
	                android:targetPackage="org.lumicall.android"
	                android:targetClass="org.sipdroid.codecs.Codecs$CodecSettings" />

	</PreferenceScreen>
 	<PreferenceScreen android:title="@string/settings_advanced_options">
			<!--  <EditTextPreference
				android:key="search"
				android:title="@string/settings_search"
				android:singleLine="true" /> -->
			<!--  <EditTextPreference
				android:key="excludepat"
				android:title="@string/settings_excludepat"
				android:singleLine="true" /> -->
			<CheckBoxPreference
				android:key="preferipv4"
				android:defaultValue="true"
				android:title="@string/settings_prefer_ipv4"
				android:summary="@string/settings_prefer_ipv4_info" />
			<ListPreference
				android:key="call_log_uri_prefix"
				android:title="@string/settings_log_uri_prefix"
				android:summary="@string/settings_log_uri_prefix_info"
				android:entries="@array/settings_log_uri_prefix_display"
				android:entryValues="@array/settings_log_uri_prefix_values"
				android:defaultValue="lumicall"
				android:dialogTitle="@string/settings_log_uri_prefix" />
			<CheckBoxPreference
				android:key="call_log_uri_hack"
				android:defaultValue="true"
				android:title="@string/settings_log_uri_hack"
				android:summary="@string/settings_log_uri_hack_info" />
			<CheckBoxPreference
				android:key="ptt_enable"
				android:defaultValue="false"
				android:title="@string/settings_ptt_enable"
				android:summary="@string/settings_ptt_enable_info"/>
			<CheckBoxPreference
				android:key="auth_full_uri"
				android:defaultValue="false"
				android:title="@string/settings_auth_full_uri"
				android:summary="@string/settings_auth_full_uri_info"/>
		<CheckBoxPreference
			android:key="publish_enable"
			android:defaultValue="true"
			android:title="@string/settings_publish_title" />
	</PreferenceScreen>
	<PreferenceScreen android:title="@string/settings_wireless_options">
			<CheckBoxPreference
				android:key="ownwifi"
				android:title="@string/settings_ownwifi"
				android:summary="@string/settings_ownwifi2" />
			<CheckBoxPreference
				android:key="selectwifi"
				android:title="@string/settings_selectwifi"
				android:summary="@string/settings_selectwifi2" />
			<CheckBoxPreference
				android:key="keepon"
				android:title="@string/settings_keepon"
				android:summary="@string/settings_keepon2" />
			<CheckBoxPreference
				android:key="bluetooth"
				android:title="@string/menu_bluetooth"
				android:summary="@string/settings_bluetooth" />
	</PreferenceScreen>
	<PreferenceScreen android:title="@string/settings_ganglia_options">
			<CheckBoxPreference
				android:key="ganglia_enable"
				android:title="@string/settings_ganglia_enable"
				android:summary="@string/settings_ganglia_enable2" />
			<CheckBoxPreference
				android:key="ganglia_uuid_enable"
				android:title="@string/settings_ganglia_uuid_enable"
				android:summary="@string/settings_ganglia_uuid_enable2" />
			<CheckBoxPreference
				android:key="ganglia_heartbeat"
				android:title="@string/settings_ganglia_heartbeat"
				android:summary="@string/settings_ganglia_heartbeat2" />
			<!--  Many users are scared of the request for GPS permissions when
			installing an app, so this is now disabled.
			<CheckBoxPreference
				android:key="ganglia_location"
				android:title="@string/settings_ganglia_location"
				android:summary="@string/settings_ganglia_location2" /> -->
			<EditTextPreference
				android:key="ganglia_dest"
				android:persistent="true"
				android:title="@string/settings_ganglia_dest"
				android:singleLine="true" />
			<EditTextPreference
				android:key="ganglia_port"
				android:title="@string/settings_ganglia_port"
				android:singleLine="true" />
			<EditTextPreference
				android:key="ganglia_ttl"
				android:title="@string/settings_ganglia_ttl"
				android:singleLine="true" />
			<EditTextPreference
				android:key="ganglia_interval"
				android:title="@string/settings_ganglia_interval"
				android:singleLine="true" />
	</PreferenceScreen>	
<!-- 	<PreferenceScreen android:title="@string/settings_pbxes_options">
			<CheckBoxPreference
				android:key="par"
				android:title="@string/settings_par"
				android:summary="@string/settings_par2" />
			<CheckBoxPreference
				android:key="improve"
				android:title="@string/settings_improve"/>
	</PreferenceScreen> -->
	<PreferenceCategory android:title="@string/silent_config">
		<PreferenceScreen
			android:title="@string/silent_disable_enable">
			<CheckBoxPreference
				android:key="silentkey"
				android:title="@string/silent_on"
				android:defaultValue="false"
				android:summaryOff="@string/silent_off"/>

			<Preference android:title="@string/silent_enter_days_time"
				android:dependency="silentkey"
				android:summary="@string/silent_optional">
				<intent android:action="android.intent.action.MAIN"
					android:targetPackage="org.lumicall.android"
					android:targetClass="org.lumicall.android.preferences.SilentMode"/>
			</Preference>
		</PreferenceScreen>
	</PreferenceCategory>
</PreferenceScreen>
